src/test/ui/consts/min_const_fn/cast_errors.stderr
error[E0723]: function pointers in const fn are unstable
  --> $DIR/cast_errors.rs:4:23
   |
LL | const fn closure() -> fn() { || {} }
   |                       ^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error[E0723]: function pointers in const fn are unstable
  --> $DIR/cast_errors.rs:7:5
   |
LL |     (|| {}) as fn();
   |     ^^^^^^^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error[E0723]: function pointers in const fn are unstable
  --> $DIR/cast_errors.rs:10:28
   |
LL | const fn reify(f: fn()) -> unsafe fn() { f }
   |                            ^^^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error[E0723]: function pointers in const fn are unstable
  --> $DIR/cast_errors.rs:12:21
   |
LL | const fn reify2() { main as unsafe fn(); }
   |                     ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0723`.
